awsdest/k8s_pythonscoringmodel_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2020-02-11T14:23:07Z"
  generation: 1
  labels:
    app: scoringsasmm
  name: scoringsasmm
  namespace: default
  selfLink: /apis/apps/v1/namespaces/default/deployments/scoringsasmm
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: scoringsasmm
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scoringsasmm
    spec:
      containers:
      - image: 617292774228.dkr.ecr.us-east-1.amazonaws.com/jakochdockermodel:10.0
        imagePullPolicy: IfNotPresent
        name: scoringsasmm
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
