awsdest/k8s_pythonscoringmodel_loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scoringsasmm
  name: scoringsaslb
spec:
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080
  selector:
    app: scoringsasmm
  sessionAffinity: None
  type: LoadBalancer
