awsdest/k8s_pythonscoringmodel_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scoringsasmm
  name: scoringsassvc
spec:
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080
  selector:
    app: scoringsasmm
  sessionAffinity: None
  type: NodePort
