awsdest/k8s_pythonscoringmodel_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: scoringsasmm
  name: scoringsasing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "sasmmcookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  -  host:
     http:
       paths:
         - path: /
           backend:
            serviceName: scoringsassvc
            servicePort: 8080
